# llmops-portfolio

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
datasets/ground_truth/: llmops_eval_ground_truth.jsonl
docs/: architecture.md  confidentiality.md  index.md
docs/case-studies/: 01-llm-evaluation-platform.md  02-rag-observability-stack.md  03-vllm-kubernetes-serving.md  04-ml-security-privacy.md  05-aiops-reliability.md
examples/evaluation_sets/: format_eval.jsonl  rag_eval.jsonl  safety_eval.jsonl
examples/synthetic_docs/: ai_governance_notes.md  deployment_guide.md  incident_runbook.md  policy_security.md
frontend/: app.html  app.js  home.js  index.html  ops.html  ops.js  styles.css
scripts/: build_report.py  run_demo.py
src/llmops_portfolio/: __init__.py  app.py  config.py  dataset.py  evaluators.py  live_evaluation.py  models.py  observability.py  providers.py  rag.py  report.py
tests/: test_evaluation_surfaces.py  test_evaluators.py  test_providers.py  test_rag.py
