[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmops-portfolio"
version = "0.1.0"
description = "Privacy-safe LLMOps portfolio demo for evaluation, RAG observability, and local-first GenAI operations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Paolo Notaro" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "scikit-learn>=1.4",
  "pandas>=2.2,<3.0",
  "pytest>=8.0",
  "rich>=13.7",
  "python-dotenv>=1.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -s"
